# MyBookshelfAI

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: deps.py  locale.py  main.py  models.py  version.py
app/routers/: books.py  library.py  reading_lists.py  recommend.py  settings.py
app/services/: cache.py  demo_seed.py  enrichment.py  library_db.py  llm.py  md_parser.py  profile.py  recommendation_scoring.py  runtime_paths.py  settings_db.py
desktop/: backend_launcher.py  build_backend_sidecar.py
docs/: backend-issues.md
frontend/: index.html  package-lock.json  package.json  run-tauri-with-rust.sh  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: baseUrl.ts  books.ts  pipelineHeaders.ts  readiness.ts  readingLists.ts  recommend.ts  settings.ts
frontend/src/components/: AddBookModal.css  AddBookModal.tsx  BookCard.css  BookCard.tsx  BookPanel.css  BookPanel.tsx  DemoBanner.css  DemoBanner.tsx  FirstRunLocaleModal.css  FirstRunLocaleModal.tsx  IndeterminateProgress.css  IndeterminateProgress.tsx  Nav.css  Nav.tsx  Pagination.css  Toast.css  (+6 more)
scripts/: run.sh  seed_enrich_test_library.py
tests/: test_flow.py  test_reading_lists.py  test_recommendation_scoring.py  test_version.py
(+18 files in other folders)
