[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mybookshelfai"
description = "Personal book recommendation engine powered by LLM"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.dynamic]
version = { attr = "app.version.__version__" }
